--- a/Clash/pref.ini
+++ b/Clash/pref.ini
@@ -198,6 +198,7 @@ surge_ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaDomain.list
 ;surge_ruleset=🎯 全球直连,rules/ConnersHua/Surge/Ruleset/Unbreak.list
 ;surge_ruleset=🎯 全球直连,rules/ConnersHua/Surge/Ruleset/China.list
 ;surge_ruleset=🎯 全球直连,rules/NobyDa/Surge/Download.list
+surge_ruleset=🤖 ChatGPT,rules/ACL4SSR/Clash/Openai.list
 ;surge_ruleset=🎥 NETFLIX,rules/ConnersHua/Surge/Ruleset/Media/Netflix.list
 surge_ruleset=🌍 国外媒体,rules/ConnersHua/Surge/Ruleset/GlobalMedia.list
 ;surge_ruleset=🌏 国内媒体,rules/lhie1/Surge3/AsianTV.list
